--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "react-vis": "^1.12.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
